--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,7 +12,7 @@
     }
 
     body {
-        @apply font-body;
+        @apply font-body text-sm mb-96;
     }
 
     @font-face {
@@ -23,6 +23,12 @@
     @font-face {
         font-family: Montserrat;
         src: url(/fonts/montserrat/Montserrat-Thin.otf);
+        font-weight: 100;
+    }
+
+    @font-face {
+        font-family: Montserrat;
+        src: url(/fonts/montserrat/Montserrat-Light.otf);
         font-weight: 100;
     }
 }
