--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,6 +22,18 @@
 
     @font-face {
         font-family: Montserrat;
+        src: url(/fonts/montserrat/Montserrat-Medium.otf);
+        font-weight: 300;
+    }
+
+    @font-face {
+        font-family: Montserrat;
+        src: url(/fonts/montserrat/Montserrat-Bold.otf);
+        font-weight: 700;
+    }
+
+    @font-face {
+        font-family: Montserrat;
         src: url(/fonts/montserrat/Montserrat-Thin.otf);
         font-weight: 100;
     }
@@ -29,6 +41,6 @@
     @font-face {
         font-family: Montserrat;
         src: url(/fonts/montserrat/Montserrat-Light.otf);
-        font-weight: 100;
+        font-weight: 200;
     }
 }
